qrypt-core/src/snapshots/qrypt__wire_format__test__encrypted_payload.snap
---
source: src/wire_format.rs
expression: encoded
---
- 10
- 11
- 72
- 101
- 108
- 108
- 111
- 32
- 119
- 111
- 114
- 108
- 100
- 18
- 0

