qrypt-core/src/snapshots/qrypt__wire_format__test__normal_multi_payload.snap
---
source: src/wire_format.rs
expression: "(first_encoded, second_encoded)"
---
- - 8
  - 5
  - 24
  - 2
  - 34
  - 7
  - 10
  - 5
  - 72
  - 101
  - 108
  - 108
  - 111
- - 8
  - 5
  - 16
  - 1
  - 24
  - 2
  - 34
  - 8
  - 10
  - 6
  - 32
  - 119
  - 111
  - 114
  - 108
  - 100

